[package]
name = "connector"
version = "0.1.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux", "connector"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "linux kernel connector via netlink"

[dependencies]
futures = "0.1.25"
lazy_static = "1.2.0"
failure = "0.1.3"

[dependencies.netlink-sys]
version = "0.1"
default-features = false
features = ["tokio_support"]
path = "../netlink-sys"

[dependencies.netlink-packet]
version = "0.1"
default-features = false
features = ["connector"]
path = "../netlink-packet"

[dependencies.netlink-proto]
version = "0.1"
default-features = false
features = ["connector"]
path = "../netlink-proto"

[dev-dependencies]
env_logger = "0.6.0"
tokio-core = "0.1.17"
